fix: removed squircle to fix grayscale animation on safari

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,7 +27,3 @@ html {
     width: 100%;
     left: 0;
 }
-
-.squircle {
-    clip-path: url(#squircleClip);
-}
